--- a/newlaundry/pubspec.yaml
+++ b/newlaundry/pubspec.yaml
@@ -14,7 +14,20 @@ dependencies:
   cupertino_icons: ^0.1.3
   smooth_star_rating: ^1.0.4
   flutter_svg: ^0.17.4
+  image_picker: ^0.6.7+7
+  flutter_form_bloc: ^0.19.0
 
+  #Firebase library
+  google_sign_in: ^4.5.3
+  cloud_firestore: ^0.14.0+2
+  firebase_auth: ^0.18.0+1
+  #flutter Toast & Shared Preferences
+  shared_preferences: ^0.5.10
+  fluttertoast: ^7.1.1
+  #Button
+  flutter_auth_buttons: ^0.10.0
+
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -33,6 +46,7 @@ flutter:
   - assets/start.png
   - assets/location.png
   - assets/shop1.png
+  - assets/plus.png
 
 
 
