--- a/newlaundry/pubspec.yaml
+++ b/newlaundry/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   smooth_star_rating: ^1.0.4
   flutter_svg: ^0.17.4
   image_picker: ^0.6.7+7
+  firebase_auth: ^0.18.0+1
 
   
 dev_dependencies:
