--- a/newlaundry/pubspec.yaml
+++ b/newlaundry/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
   flutter_svg: ^0.17.4
   image_picker: ^0.6.7+7
   firebase_auth: ^0.18.0+1
+  firebase_storage: ^4.0.0
+  firebase_core: ^0.5.0
 
   
 dev_dependencies:
