--- a/newlaundry/pubspec.yaml
+++ b/newlaundry/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   firebase_storage: ^4.0.0
   firebase_core: ^0.5.0
   cloud_firestore: ^0.14.0+2
+  firebase_database: ^4.0.0
 
   
 dev_dependencies:
